title name corrected

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title> Divyanhu | Lecture Notes</title>
+<title> Divyanshu | Lecture Notes</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel = "icon" href =  "C:\Users\user\Desktop\icon.jpg"  type = "image/x-icon"> 
 <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
